// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create text, change and revert with Enter/Escape in TextField 1`] = `
<TextField
  disabled={false}
  id=""
  noborder={false}
  onBlur={[Function]}
  onChange={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onValidation={[Function]}
  sizing="normal"
  style={Object {}}
  type="text"
  useclear={false}
  usevalidation={false}
  validators={Array []}
  visible={true}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-textfield-container"
      style={Object {}}
    >
      <div
        className="ui-textfield-container sc-dnqmqq efWnFk"
        style={Object {}}
      >
        <styled.div
          className="ui-textfield"
          disabled={false}
          noborder={false}
          visible={true}
        >
          <div
            className="ui-textfield sc-iwsKbI drrfKT"
            disabled={false}
          >
            <styled.input
              disabled={false}
              id=""
              innerRef={[Function]}
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              sizing="normal"
              style={Object {}}
              type="text"
              visible={true}
            >
              <input
                className="sc-htoDjs fgOHaF"
                disabled={false}
                id=""
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                style={Object {}}
                type="text"
              />
            </styled.input>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </ThemeProvider>
</TextField>
`;

exports[`Test creating TextField and saving on blur 1`] = `
<TextField
  disabled={false}
  id=""
  noborder={false}
  onBlur={[Function]}
  onChange={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onValidation={[Function]}
  sizing="normal"
  style={Object {}}
  type="text"
  useclear={false}
  usevalidation={false}
  validators={Array []}
  visible={true}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-textfield-container"
      style={Object {}}
    >
      <div
        className="ui-textfield-container sc-dnqmqq efWnFk"
        style={Object {}}
      >
        <styled.div
          className="ui-textfield"
          disabled={false}
          noborder={false}
          visible={true}
        >
          <div
            className="ui-textfield sc-iwsKbI drrfKT"
            disabled={false}
          >
            <styled.input
              disabled={false}
              id=""
              innerRef={[Function]}
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              sizing="normal"
              style={Object {}}
              type="text"
              visible={true}
            >
              <input
                className="sc-htoDjs fgOHaF"
                disabled={false}
                id=""
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                style={Object {}}
                type="text"
              />
            </styled.input>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </ThemeProvider>
</TextField>
`;

exports[`Test creation of a TextField control 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-textfield-container"
    style={Object {}}
  >
    <styled.div
      className="ui-textfield test-class"
      disabled={false}
      noborder={false}
      visible={true}
    >
      <styled.input
        className="test-class"
        disabled={false}
        id=""
        innerRef={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        sizing="normal"
        style={Object {}}
        type="text"
        visible={true}
      />
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`Test creation of a TextField with email validation 1`] = `
<TextField
  disabled={false}
  id=""
  noborder={false}
  onBlur={[Function]}
  onChange={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onValidation={[Function]}
  sizing="normal"
  style={Object {}}
  type="email"
  useclear={false}
  usevalidation={true}
  validators={Array []}
  visible={true}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-textfield-container"
      style={Object {}}
    >
      <div
        className="ui-textfield-container sc-dnqmqq efWnFk"
        style={Object {}}
      >
        <styled.div
          className="ui-textfield"
          disabled={false}
          noborder={false}
          visible={true}
        >
          <div
            className="ui-textfield sc-iwsKbI drrfKT"
            disabled={false}
          >
            <styled.input
              disabled={false}
              id=""
              innerRef={[Function]}
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              sizing="normal"
              style={Object {}}
              type="email"
              visible={true}
            >
              <input
                className="sc-htoDjs fgOHaF"
                disabled={false}
                id=""
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                style={Object {}}
                type="email"
              />
            </styled.input>
          </div>
        </styled.div>
        <styled.div
          className="ui-textfield-validation-message"
          disabled={false}
          messageType={0}
          sizing="small"
          visible={true}
        >
          <div
            className="ui-textfield-validation-message sc-gzVnrw fpmiFb"
            disabled={false}
          >
            ​
          </div>
        </styled.div>
      </div>
    </styled.div>
  </ThemeProvider>
</TextField>
`;

exports[`Test creation of a TextField with url validation 1`] = `
<TextField
  disabled={false}
  id=""
  noborder={false}
  onBlur={[Function]}
  onChange={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onValidation={[Function]}
  sizing="normal"
  style={Object {}}
  type="url"
  useclear={false}
  usevalidation={true}
  validators={Array []}
  visible={true}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-textfield-container"
      style={Object {}}
    >
      <div
        className="ui-textfield-container sc-dnqmqq efWnFk"
        style={Object {}}
      >
        <styled.div
          className="ui-textfield"
          disabled={false}
          noborder={false}
          visible={true}
        >
          <div
            className="ui-textfield sc-iwsKbI drrfKT"
            disabled={false}
          >
            <styled.input
              disabled={false}
              id=""
              innerRef={[Function]}
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              sizing="normal"
              style={Object {}}
              type="url"
              visible={true}
            >
              <input
                className="sc-htoDjs fgOHaF"
                disabled={false}
                id=""
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                style={Object {}}
                type="url"
              />
            </styled.input>
          </div>
        </styled.div>
        <styled.div
          className="ui-textfield-validation-message"
          disabled={false}
          messageType={0}
          sizing="small"
          visible={true}
        >
          <div
            className="ui-textfield-validation-message sc-gzVnrw fpmiFb"
            disabled={false}
          >
            ​
          </div>
        </styled.div>
      </div>
    </styled.div>
  </ThemeProvider>
</TextField>
`;

exports[`Test creation of a textfield with min/max validation 1`] = `
<TextField
  disabled={false}
  id=""
  maxLength="10"
  minLength="5"
  noborder={false}
  onBlur={[Function]}
  onChange={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onValidation={[Function]}
  sizing="normal"
  style={Object {}}
  type="text"
  useclear={false}
  usevalidation={true}
  validators={Array []}
  value=""
  visible={true}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-textfield-container"
      style={Object {}}
    >
      <div
        className="ui-textfield-container sc-dnqmqq efWnFk"
        style={Object {}}
      >
        <styled.div
          className="ui-textfield"
          disabled={false}
          noborder={false}
          visible={true}
        >
          <div
            className="ui-textfield sc-iwsKbI drrfKT"
            disabled={false}
          >
            <styled.input
              disabled={false}
              id=""
              innerRef={[Function]}
              maxLength="10"
              minLength="5"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              sizing="normal"
              style={Object {}}
              type="text"
              value=""
              visible={true}
            >
              <input
                className="sc-htoDjs fgOHaF"
                disabled={false}
                id=""
                maxLength="10"
                minLength="5"
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                style={Object {}}
                type="text"
                value=""
              />
            </styled.input>
          </div>
        </styled.div>
        <styled.div
          className="ui-textfield-validation-message"
          disabled={false}
          messageType={0}
          sizing="small"
          visible={true}
        >
          <div
            className="ui-textfield-validation-message sc-gzVnrw fpmiFb"
            disabled={false}
          >
            ​
          </div>
        </styled.div>
      </div>
    </styled.div>
  </ThemeProvider>
</TextField>
`;

exports[`Test disabling of a TextField control 1`] = `
<TextField
  disabled={true}
  id=""
  noborder={false}
  onBlur={[Function]}
  onChange={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onValidation={[Function]}
  sizing="normal"
  style={Object {}}
  type="text"
  useclear={false}
  usevalidation={false}
  validators={Array []}
  visible={true}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-textfield-container"
      style={Object {}}
    >
      <div
        className="ui-textfield-container sc-dnqmqq efWnFk"
        style={Object {}}
      >
        <styled.div
          className="ui-textfield"
          disabled={true}
          noborder={false}
          visible={true}
        >
          <div
            className="ui-textfield sc-iwsKbI uObwk"
            disabled={true}
          >
            <styled.input
              disabled={true}
              id=""
              innerRef={[Function]}
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              sizing="normal"
              style={Object {}}
              type="text"
              visible={true}
            >
              <input
                className="sc-htoDjs jZeXuL"
                disabled={true}
                id=""
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                style={Object {}}
                type="text"
              />
            </styled.input>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </ThemeProvider>
</TextField>
`;

exports[`Test making the TextField invisible 1`] = `
<TextField
  disabled={false}
  id=""
  noborder={false}
  onBlur={[Function]}
  onChange={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onValidation={[Function]}
  sizing="normal"
  style={Object {}}
  type="text"
  useclear={false}
  usevalidation={false}
  validators={Array []}
  visible={false}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-textfield-container"
      style={Object {}}
    >
      <div
        className="ui-textfield-container sc-dnqmqq efWnFk"
        style={Object {}}
      >
        <styled.div
          className="ui-textfield"
          disabled={false}
          noborder={false}
          visible={false}
        >
          <div
            className="ui-textfield sc-iwsKbI drrfKT"
            disabled={false}
          >
            <styled.input
              disabled={false}
              id=""
              innerRef={[Function]}
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              sizing="normal"
              style={Object {}}
              type="text"
              visible={false}
            >
              <input
                className="sc-htoDjs WInOW"
                disabled={false}
                id=""
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                style={Object {}}
                type="text"
              />
            </styled.input>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </ThemeProvider>
</TextField>
`;

exports[`Test retrieval of TextField props object 1`] = `
Object {
  "disabled": false,
  "id": "",
  "noborder": false,
  "onBlur": [Function],
  "onChange": [Function],
  "onKeyDown": [Function],
  "onKeyPress": [Function],
  "onValidation": [Function],
  "sizing": "normal",
  "style": Object {},
  "type": "text",
  "useclear": false,
  "usevalidation": false,
  "validators": Array [],
  "visible": true,
}
`;
